manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "helloworldaks-b9d6"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "helloworldaks-b9d6"
  template:
    metadata:
      labels:
        app: "helloworldaks-b9d6"
    spec:
      containers:
        - name: "helloworldaks-b9d6"
          image: "halpur.azurecr.io/helloworldaks"
          ports:
          - containerPort: 80
